# telegram2drive

./: README.md  pyproject.toml
src/telegram2drive/: monitor_group_chat.py  upload_to_drive.py
